# aiida-lammps

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  setup.json  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml  tests.yml
.pre-commit/: check_version.py
.travis-data/: check_version.py
aiida_lammps/: __init__.py  utils.py
aiida_lammps/calculations/: base.py  dynaphopy.py  raw.py
aiida_lammps/calculations/lammps/: __init__.py  base.py  combinate.py  force.py  md.py  md_multi.py  optimize.py
aiida_lammps/common/: generate_input_files.py  generate_structure.py  input_data.py  input_generator.py  parse_trajectory.py  raw_parsers.py  reaxff_convert.py  utils.py  variables_types.json
aiida_lammps/data/: lammps_potential.py  lammps_potentials.json  potential.py  trajectory.py
aiida_lammps/data/pot_plugins/: __init__.py  base_plugin.py  eam.py  lennard_jones.py  reaxff.py  tersoff.py
aiida_lammps/examples/: launch_lammps_optimization_gan.py  launch_phonopy_gan.py
aiida_lammps/fixtures/: calculations.py  data.py  inputs.py
aiida_lammps/parsers/: base.py  dynaphopy.py  inputfile.py  raw.py  utils.py
aiida_lammps/tests/: __init__.py  conftest.py  test_calculations.py  test_examples.py  test_generate_inputs.py  test_generate_structure.py  test_optimisation.py  test_parsers.py  test_potential_data.py  test_raw_parsers.py  test_reaxff_parse.py  test_trajectory.py  utils.py
aiida_lammps/validation/: __init__.py  force.schema.json  md.schema.json  optimize.schema.json  reaxff.schema.json  utils.py
aiida_lammps/workflows/: base.py  md.py  relax.py
docs/: Makefile  conf.py
docs/source/: _toc.yml  conf.py  index.md  nitpick-exceptions
docs/source/static/: logo.pptx
examples/: Fe_2.eam.fs  lauch_lammps_base.py  launch_dynaphopy_si.py  launch_lammps_base.py  launch_lammps_base_files.py  launch_lammps_base_md.py  launch_lammps_base_minimize.py  launch_lammps_base_restart_file.py  launch_lammps_base_restart_folder.py  launch_lammps_base_script.py  launch_lammps_base_workflow.py  launch_lammps_combinate.py  launch_lammps_force_gan.py  launch_lammps_md_si.py  launch_lammps_optimization_fe.py  launch_lammps_optimization_gan.py  launch_lammps_optimization_lj.py  launch_lammps_raw_script.py
examples/calculations/: launch_lammps_md.py  launch_lammps_minimize.py
plugins/launcher/: launch_dynaphopy_si.py  launch_lammps_combinate.py  launch_lammps_force_gan.py  launch_lammps_md_si.py  launch_lammps_optimization_fe.py  launch_lammps_optimization_lj.py  launch_vasp_si.py
plugins/parsers/: dynaphopy.py  phonopy.py
src/aiida_lammps/: __init__.py  utils.py
tests/: __init__.py  test_calculations.py  test_generate_inputs.py  test_generate_structure.py  test_parsers.py  test_potential_data.py  test_trajectory.py  test_workflows.py  utils.py
tests/calculations/: test_raw.py
tests/parsers/: test_raw.py
tests/test_calculations/: test_force_process_eam_.yml  test_force_process_lennard_jones_.yml  test_force_process_reaxff_.yml  test_force_process_tersoff_.yml  test_input_creation_lennard_jones_lammps_force_.txt  test_input_creation_reaxff_lammps_md_.txt  test_lammps_base_parameters_md_npt_.npz  test_lammps_base_parameters_md_npt_.yml  test_lammps_base_parameters_md_nve_.npz  test_lammps_base_parameters_md_nve_.yml  test_lammps_base_parameters_md_nvt_.npz  test_lammps_base_parameters_md_nvt_.yml  test_lammps_base_parameters_minimize_.npz  test_lammps_base_parameters_minimize_.yml  test_lammps_base_parameters_minimize_groups_.npz  test_lammps_base_parameters_minimize_groups_.yml  test_md_multi_process_eam_.yml  test_md_multi_process_lennard_jones_.yml  test_md_multi_process_reaxff_.yml  test_md_multi_process_tersoff_.yml  test_md_process-eam-2019.yml  test_md_process-eam-2020.yml  test_md_process-eam-2022.yml  test_md_process-lennard-jones-2019.yml  test_md_process-lennard-jones-2021.yml  test_md_process-lennard-jones-2022.yml  test_md_process-tersoff-2019.yml  test_md_process-tersoff-2020.yml  test_optimize_process_eam_.yml  test_optimize_process_lennard_jones_.yml  test_optimize_process_reaxff_.yml  test_optimize_process_tersoff_.yml
tests/test_generate_inputs/: md.yaml  parameters_md.yaml  parameters_minimize.yaml  test_generate_input_eam_alloy_md.txt  test_generate_input_eam_alloy_md_restart.txt  test_generate_input_eam_alloy_minimize.txt  test_input_generate_md_eam_alloy_None_.txt  test_input_generate_md_eam_alloy_input_aiida_lammps_restart_.txt  test_input_generate_minimize_eam_alloy_.txt  test_input_generate_minimize_eam_alloy_False_.txt  test_input_generate_minimize_eam_alloy_True_.txt  test_input_generate_restart_False_True_100_.yml  test_input_generate_restart_True_False_None_.yml  test_input_generate_restart_True_True_100_.yml
tests/test_generate_structure/: test_generate_Fe_.txt  test_generate_fes_cubic_zincblende_.txt  test_generate_pyrite_.txt
tests/test_lammps_potential_data/: test_init_eam_alloy.yaml  test_init_eam_alloy_block.txt  test_init_meam.yaml  test_init_meam_block.txt  test_init_tersoff.yaml  test_init_tersoff_block.txt
tests/test_parsers/: test_base_parser_error.yml  test_lammps_base.yml  test_lammps_base_timing_info.yml  test_parser_log.yml  test_parser_out.yml
tests/test_potential_data/: test_input_lines_eam_.txt  test_input_lines_lennard_jones_.txt  test_input_lines_tersoff_.txt
tests/test_raw_parsers/: test_parse_log.yaml  test_parse_trajectory_file.yml
tests/test_reaxff_parse/: test_read_lammps_format2.yml  test_round_trip_lammps_format.txt  test_round_trip_lammps_format2.txt
tests/test_trajectory/: test_create_structure.yml  test_iter_trajectories.yml  test_lammps_trajectory_data.yml  test_lammpstraj_get_step_string.txt
tests/test_workflows/: test_relax_workchain_parameters_relax0_.yml  test_relax_workchain_parameters_relax1_.npz  test_relax_workchain_parameters_relax1_.yml  test_relax_workchain_parameters_relax2_.npz  test_relax_workchain_parameters_relax2_.yml
(+165 files in other folders)
